--- a/common/style.css
+++ b/common/style.css
@@ -6,6 +6,13 @@
     -webkit-transition: opacity 1.5s ease-in-out;
   }
 
+  .embed {
+    position: absolute;
+    top: 55%;
+    left: 35%;
+    visibility: hidden;
+  }
+
   .msgStrip {
     position: fixed !important;
     bottom: 50% !important;
